welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: method fonctionTest has return statement; needs result type
  return Boolean = (estFaceMur() & bool)
  ^